--- a/Day 5/style.css
+++ b/Day 5/style.css
@@ -62,6 +62,27 @@ label {
     margin-bottom: -10px;
 }
 
+.password-wrapper {
+    width: 100%;
+    position: relative;
+}
+
+.password-wrapper input {
+    width: 100%;
+    padding-right: 60px;
+}
+
+.password-wrapper button {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.1rem;
+}
+
 .error-message {
     color: #dc2626;
     font-size: 0.85rem;
@@ -93,7 +114,7 @@ button[type="submit"] {
     .container h2 {
         font-size: 36px;
     }
-    form [
+    form {
         font-size: 18px;
-    ]
+    }
 }
