--- a/Sticky Notes App/style.css
+++ b/Sticky Notes App/style.css
@@ -1,259 +1,310 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap");
 
 :root {
-    --color-primary: #6C9BCF;
-    --color-danger: #FF0060;
-    --color-success: #1B9C85;
-    --color-warning: #F7D060;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-dark: #363949;
-    --color-light: rgba(132, 139, 200, 0.18);
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
+  --color-primary: #6c9bcf;
+  --color-danger: #ff0060;
+  --color-success: #1b9c85;
+  --color-warning: #f7d060;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
 
-    --card-border-radius: 2rem;
-    --border-radius-1: 0.4rem;
-    --border-radius-2: 1.2rem;
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 1.2rem;
 
-    --card-padding: 1.8rem;
-    --padding-1: 1.2rem;
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(--color-light);
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
-.dark-mode-variables{
-    --color-background: #181a1e;
-    --color-white: #202528;
-    --color-dark: #edeffd;
-    --color-dark-variant: #a3bdcc;
-    --color-light: rgba(0, 0, 0, 0.4);
-    --box-shadow: 0 2rem 3rem var(--color-light);
+.dark-mode-variables {
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    outline: 0;
-    appearance: 0;
-    text-decoration: none;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  appearance: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: "Poppins", sans-serif;
-    font-size: 0.9rem;
-    overflow-x: hidden;
-    color: var(--color-dark);
-    background-color: var(--color-background);
+  width: 100vw;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+  overflow-x: hidden;
+  color: var(--color-dark);
+  background-color: var(--color-background);
 }
 
 a {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 h1 {
-    font-weight: 800;
-    font-size: 1.8rem;
+  font-weight: 800;
+  font-size: 1.8rem;
 }
 
 h2 {
-    font-weight: 600;
-    font-size: 1.4rem;
+  font-weight: 600;
+  font-size: 1.4rem;
 }
 
 h3 {
-    font-weight: 500;
-    font-size: 1.2rem;
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 small {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 p {
-    color: var(--color-dark-variant);
+  color: var(--color-dark-variant);
 }
 
 b {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 .text-muted {
-    color: var(--color-info-dark);
+  color: var(--color-info-dark);
 }
 
 .primary {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .danger {
-    color: var(--color-danger);
+  color: var(--color-danger);
 }
 
 .container {
-    display: grid;
-    width: 96%;
-    margin: 0 auto;
-    gap: 1.8rem;
-    grid-template-columns: 12rem auto 23rem;
+  display: grid;
+  width: 96%;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 12rem auto 23rem;
 }
 
 aside {
-    height: 100vh;
+  height: 100vh;
 }
 
 aside .toggle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.4rem;
 }
 
 aside .toggle .logo {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 aside .toggle .close {
-    padding-right: 1rem;
-    display: none;
+  padding-right: 1rem;
+  display: none;
 }
 
 aside .sidebar {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--color-white);
-    box-shadow: var(--box-shadow);
-    border-radius: 15px;
-    height: 88vh;
-    position: relative;
-    top: 1.5rem;
-    transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-white);
+  box-shadow: var(--box-shadow);
+  border-radius: 15px;
+  height: 88vh;
+  position: relative;
+  top: 1.5rem;
+  transition: all 0.3s ease;
 }
 
 aside .sidebar:hover {
-    box-shadow: none;
+  box-shadow: none;
 }
 
-aside .sidebar a{
-    display: flex;
-    align-items: center;
-    color: var(--color-info-dark);
-    height: 3.7rem;
-    gap: 1rem;
-    position: relative;
-    margin-left: 2rem;
-    transition: all 0.3s ease;
+aside .sidebar a {
+  display: flex;
+  align-items: center;
+  color: var(--color-info-dark);
+  height: 3.7rem;
+  gap: 1rem;
+  position: relative;
+  margin-left: 2rem;
+  transition: all 0.3s ease;
 }
 
 aside .sidebar a span {
-    font-size: 1.6rem;
-    transition: all 0.3s ease;
+  font-size: 1.6rem;
+  transition: all 0.3s ease;
 }
 
 aside .sidebar a.active {
-    width: 100%;
-    color: var(--color-primary);
-    background-color: var(--color-light);
-    margin-left: 0;
+  width: 100%;
+  color: var(--color-primary);
+  background-color: var(--color-light);
+  margin-left: 0;
 }
 
 aside .sidebar a.active::before {
-    content: "";
-    width: 6px;
-    height: 18px;
-    background-color: var(--color-primary);
+  content: "";
+  width: 6px;
+  height: 18px;
+  background-color: var(--color-primary);
 }
 
 aside .sidebar a.active span {
-    color: var(--color-primary);
-    margin-left: calc(1rem - 3px);
+  color: var(--color-primary);
+  margin-left: calc(1rem - 3px);
 }
 
 aside .sidebar a:hover {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 aside .sidebar a:hover span {
-    margin-left: 0.6rem;
+  margin-left: 0.6rem;
 }
 
 main {
-    background-color: var(--color-white);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    padding: 10px;
-    margin: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 10px;
+  margin: 5px;
+}
+
+.theme-toggle-wrapper {
+  display: flex;
+  width: 68%;
+  justify-content: flex-end;
+  padding: 10px 20px;
+}
+
+.theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: color-dark;
+  transition: transform 0.3s ease;
+}
+
+#theme-toggle {
+  background: transparent;
+  border: none;
+  color: var(--color-dark);
+}
+
+.theme-toggle:hover {
+  transform: rotate(20deg);
+}
+
+.theme-toggle span {
+  font-size: 28px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: padding-right;
+  justify-content: right;
 }
 
 .main-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
-    text-align: center;
-    margin-top: 15px;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  text-align: center;
+  margin-top: 15px;
+  gap: 15px;
 }
 
 .note-input-bar {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 60%;
-    margin-top: 10px;
-    max-width: 500px;
-    gap: 10px;
-    padding: 10px 12px;
-    border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.22);
+  display: flex;
+  align-items: center;
+  background-color: var(--color-white);
+  width: 100%;
+  height: 60%;
+  margin-top: 10px;
+  max-width: 500px;
+  gap: 10px;
+  padding: 10px 12px;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.22);
 }
 
 .note-input-bar input[id="note"] {
-    position: relative;
-    width: 100%;
-    max-width: 500px;
-    font-size: 18px;
-    flex: 1;
-    margin: 10px;
-    align-items: center;
-    border: none;
-    outline: none;
-    
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  font-size: 18px;
+  flex: 1;
+  margin: 10px;
+  padding: 8px;
+  align-items: center;
+  border: none;
+  outline: none;
 }
 
 .note-input-bar button {
-    padding: 8px 8px;
-    color: var(--color-info-dark);
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all 0.5s ease;
-}
-
-
-
-form button:hover {
-    color: var(--color-primary);
+  padding: 8px 8px;
+  color: var(--color-info-dark);
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
 
 .main-section span {
-    font-size: 164px;
+  font-size: 164px;
+}
+
+body.dark-mode-variables input#note {
+  background-color: var(--color-white);
+  color: #edeffd;
+}
+
+body.dark-mode-variables input#note::placeholder {
+  color: #a3bdcc;
+}
+
+body.dark-mode-variables form button {
+  background-color: #202528;
+  color: #a3bdcc;
+}
+
+body {
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease;
 }
